--- a/PWGLF/FORWARD/analysis2/sim/Final.jdl.in
+++ b/PWGLF/FORWARD/analysis2/sim/Final.jdl.in
@@ -44,21 +44,23 @@ InputFile = {
 	"LF:@data@/$4.C",
 	"LF:@data@/$4Config.C",
 	"LF:@data@/GRP.C",
-	"LF:@data@/fmd_correcions.root,"
+	"LF:@data@/fmd_corrections.root",
 	"LF:@out@/$3/$1/$4_Stage_$2.xml"
 };
-OutputDir = "@out@/$3/$1/";
+OutputDir = "@out@/$3/$1";
 OutputArchive = {
    "$4_merge_log_archive.zip:std*,fileinfo*.log@disk=1",
    "$4_merge_archive.zip:*.root,*.stat*@disk=2"
 };
 TTL = "36000";
-Price = "20";
+Price = "1";
 Validationcommand = "/alice/cern.ch/user/a/aliprod/QA/validation_merge.sh";
 Workdirectorysize = {"5000MB"};
-JDLVariables = 
-{
+JDLVariables = {
    "Packages",
    "OutputDir"
 };
 Workdirectorysize = {"10000MB"};
+#
+# EOF
+#
