--- a/PWGLF/FORWARD/analysis2/sim/Merge.jdl.in
+++ b/PWGLF/FORWARD/analysis2/sim/Merge.jdl.in
@@ -54,7 +54,7 @@ InputDataList="wn.xml";
 OutputDir="@out@/$3/$1/$4_Stage_$2/#alien_counter_03i#";
 OutputArchive={
 	"$4_log_archive.zip:std*,fileinfo*.log@disk=1",
-	"$4_archive.zip:*.root,*.stat*@disk=2"
+	"$4_archive.zip:EventStat_temp.root,*$4*.root,*.stat*@disk=2"
 };
 Split="se";
 SplitMaxInputFileNumber="20";
