add possibility to add detectror expert email for per-detector notifications

--- a/PWGPP/QA/scripts/runQA.example.config
+++ b/PWGPP/QA/scripts/runQA.example.config
@@ -23,6 +23,10 @@ ocdbStorage="raw://"
 #email to
 MAILTO="fbellini@cern.ch"
 
+#email detector experts
+MAILTO_TPC="marian.ivanov@cern.ch"
+MAILTO_T0="alla.maevskaia@cern.ch"
+
 #alien user name
 alienUserName="mkrzewic"
 
