--- a/PWGLF/FORWARD/analysis2/sim/Merge.jdl.in
+++ b/PWGLF/FORWARD/analysis2/sim/Merge.jdl.in
@@ -45,6 +45,7 @@ InputDataCollection={
 InputFile={
 	"LF:@data@/$4.C",
 	"LF:@data@/$4Config.C",
+	"LF:@data@/BaseConfig.C",
 	"LF:@data@/DetConfig.C",
 	"LF:@data@/GRP.C",
 	"LF:@data@/fmd_corrections.root"
@@ -70,7 +71,7 @@ JDLVariables={
 };
 LPMActivity="86400";
 
-#
-# EOF
-#
+# Local Variables:
+#  mode: conf-javaprop
+# End:
 
