some cleanup, better documentation

--- a/PWGPP/QA/scripts/alienSync.conf
+++ b/PWGPP/QA/scripts/alienSync.conf
@@ -9,6 +9,7 @@ alienFindCommand="alien_find /alice/data/2012/ OCDB/root_archive.zip"
 #this one skips the alienFindCommand and uses the existing localAlienDatabase.list file
 #useExistingAlienFileDatabase=1
 
+#use absolute paths! it affects the creation of the local file list
 localPathPrefix="/hera/alice/alien"
 
 logOutputPath="/hera/alice/aux/logs/alienSync/alienSync.2012.CalibObjects.root.logs"
