--- a/ZDC/CMakeLists.txt
+++ b/ZDC/CMakeLists.txt
@@ -9,5 +9,15 @@ file(GLOB PACKAGES CMake*.pkg)
 
 ALICE_BuildModule()
 
-install ( FILES "SpectatorSignal.root" "GlauberMCDist.root" 
-	  DESTINATION ZDC )
+install ( FILES 
+  GlauberMCDist.root
+  GlauberMCHistos.root
+  PMTGainsdata.txt
+  SpectatorSignal.root
+  ZNASignal.root
+  ZNCSignal.root
+  ZNsignalntu.root
+  ZPASignal.root
+  ZPCSignal.root
+  ZPsignalntu.root
+  DESTINATION ZDC )
