add the possibility to process the event stat file
additionally run the user functions in a subshell

--- a/PWGPP/QA/detectorQAscripts/EXAMPLE.sh.template
+++ b/PWGPP/QA/detectorQAscripts/EXAMPLE.sh.template
@@ -40,3 +40,9 @@ runLevelHighPtTreeQA()
   #input is the high pt tree (if available)
   highPtTree=$1
 }
+
+runLevelEventStatQA()
+{
+  #input is the event_stat file
+  eventStatFile=$1
+}
