--- a/PWGPP/QA/detectorQAscripts/EXAMPLE.sh.template
+++ b/PWGPP/QA/detectorQAscripts/EXAMPLE.sh.template
@@ -1,13 +1,22 @@
 # this is a simple template
-# it defines two functions: runLevelQA and periodLevelQA
+# it defines few functions: one for each input file type (per run):
+# (QAresults.root, QAresults_outer.root, event_stat.root, Filter_trees.root)
+# and a function to process the output of those on a per-period level,
+# ideally for each run a trending.root file is created - it is then automatically merged
+# and offered as input to the per-period trending function, see below.
 # 
 # available variables:
-#  $dataType     e.g. data or sim
-#  $year         e.g. 2011
-#  $period       e.g. LHC13g
-#  $runNumber    e.g. 169123
-#  $pass         e.g. cpass1,pass1,passMC
-#  $ocdbStorage  e.g. "raw://", "local://./OCDB"
+#  $qaFile         e.g. /path/QA_merge_archive.zip#QAresults.root
+#  $qaFileOuter    e.g. /path/QA_merge_archive.zip#QAresults_outer.root
+#  $highPtTree     e.g. /path/Filter_trees.root
+#  $eventStatFile  e.g. /path/event_stat.root
+#
+#  $dataType       e.g. data or sim
+#  $year           e.g. 2011
+#  $period         e.g. LHC13g
+#  $runNumber      e.g. 169123
+#  $pass           e.g. cpass1,pass1,passMC
+#  $ocdbStorage    e.g. "raw://", "local://./OCDB"
 
 runLevelQA()
 {
@@ -43,6 +52,12 @@ runLevelHighPtTreeQA()
 
 runLevelEventStatQA()
 {
-  #input is the event_stat file
+  #input is the event_stat file (if available)
   eventStatFile=$1
+}
+
+runLevelQAouter()
+{
+  #input is the QAresults_outer.root (if available)
+  qaFileOuter=$1
 }
