--- a/PWGPP/QA/detectorQAscripts/EXAMPLE.sh.template
+++ b/PWGPP/QA/detectorQAscripts/EXAMPLE.sh.template
@@ -5,22 +5,23 @@
 # ideally for each run a trending.root file is created - it is then automatically merged
 # and offered as input to the per-period trending function, see below.
 # 
-# available variables:
-#  $qaFile         e.g. /path/QA_merge_archive.zip#QAresults.root
-#  $qaFileOuter    e.g. /path/QA_merge_archive.zip#QAresults_outer.root
-#  $highPtTree     e.g. /path/Filter_trees.root
-#  $eventStatFile  e.g. /path/event_stat.root
+# available variables (can be used in all functions):
+#  $qaFile              e.g. /path/QA_merge_archive.zip#QAresults.root
+#  $qaFileOuter         e.g. /path/QA_merge_archive.zip#QAresults_outer.root
+#  $highPtTree          e.g. /path/Filter_trees.root
+#  $eventStatFile       e.g. /path/event_stat.root
+#  $eventStatFileOuter  e.g. /path/event_stat_outer.root
 #
-#  $dataType       e.g. data or sim
-#  $year           e.g. 2011
-#  $period         e.g. LHC13g
-#  $runNumber      e.g. 169123
-#  $pass           e.g. cpass1,pass1,passMC
-#  $ocdbStorage    e.g. "raw://", "local://./OCDB"
+#  $dataType            e.g. data or sim
+#  $year                e.g. 2011
+#  $period              e.g. LHC13g
+#  $runNumber           e.g. 169123
+#  $pass                e.g. cpass1,pass1,passMC
+#  $ocdbStorage         e.g. "raw://", "local://./OCDB"
 
 runLevelQA()
 {
-  #full path of QAresults.root is provided
+  #full path of QAresults.root is provided:
   qaFile=$1
 
   #aliroot....
@@ -31,7 +32,8 @@ runLevelQA()
 
 periodLevelQA()
 {
-  #path of the merged period trending.root is provided
+  #per-run trending is merged by the framework,
+  #path of the merged trending.root is provided:
   trendingFile=$1 
 
   #merged trending file in fact present in current dir
@@ -46,7 +48,7 @@ periodLevelQA()
 #########EXPERTS ONLY####################################
 runLevelHighPtTreeQA()
 {
-  #input is the high pt tree (if available)
+  #input is the high pt tree file (if available)
   highPtTree=$1
 }
 
@@ -60,4 +62,10 @@ runLevelQAouter()
 {
   #input is the QAresults_outer.root (if available)
   qaFileOuter=$1
+}
+
+runLevelEventStatQAouter()
+{
+  #input is the event_stat_outer.root file (if available)
+  eventStatFileOuter=$1
 }
