Online data source moved to config.

--- a/MONITOR/alionlinereco/onlinereco.conf
+++ b/MONITOR/alionlinereco/onlinereco.conf
@@ -24,3 +24,4 @@ logbook.pass:                            pass123
 
 //data source (local, run)
 data.source                              local
+data.online.source                       mem@*:
