example for custom NanoAODSetter

--- a/PWG/DevNanoAOD/CMakeLists.txt
+++ b/PWG/DevNanoAOD/CMakeLists.txt
@@ -34,6 +34,7 @@ set(SRCS
   AliNanoAODCustomSetter.cxx
   AliNanoAODReplicator.cxx
   AliNanoAODTrack.cxx
+  AliAnalysisNanoAODCutsCRCZDC.cxx
   )
 
 # Headers from sources
