--- a/PWG/FLOW/Tasks/CMakeLists.txt
+++ b/PWG/FLOW/Tasks/CMakeLists.txt
@@ -28,6 +28,7 @@ include_directories(${ROOT_INCLUDE_DIRS}
                     ${AliPhysics_SOURCE_DIR}/PWG/FLOW/Base
                     ${AliPhysics_SOURCE_DIR}/PWG/muon
                     ${AliPhysics_SOURCE_DIR}/PWG/Tools
+                    ${AliPhysics_SOURCE_DIR}/PWG/DevNanoAOD
   )
 
 # Sources - alphabetical order
@@ -87,7 +88,7 @@ add_library_tested(${MODULE} SHARED  ${SRCS} G__${MODULE}.cxx)
 
 # Generate the ROOT map
 # Dependecies
-set(LIBDEPS PWGflowBase PWGmuon ANALYSIS ANALYSISalice AOD ESD STEERBase)
+set(LIBDEPS PWGflowBase PWGmuon ANALYSIS ANALYSISalice AOD ESD STEERBase PWGDevNanoAOD)
 generate_rootmap("${MODULE}" "${LIBDEPS}" "${CMAKE_CURRENT_SOURCE_DIR}/${MODULE}LinkDef.h")
 
 # Generate a PARfile target for this library
