--- a/PWGHF/correlationHF/CMakeLists.txt
+++ b/PWGHF/correlationHF/CMakeLists.txt
@@ -45,6 +45,7 @@ set(SRCS
     AliHFOfflineCorrelator.cxx
     AliReducedParticle.cxx
     AliD0hCutOptim.cxx
+    AliDstarhCutOptim.cxx
     AliAnalysisTaskDStarCorrelations.cxx
     AliAnalysisTaskSED0Correlations.cxx
     AliAnalysisTaskSEDplusCorrelations.cxx
