--- a/PWGPP/CMakeLists.txt
+++ b/PWGPP/CMakeLists.txt
@@ -309,7 +309,7 @@ install(DIRECTORY macros DESTINATION PWGPP)
 install(DIRECTORY CalibMacros DESTINATION PWGPP)
 install(DIRECTORY PilotTrain DESTINATION PWGPP)
 install(DIRECTORY CalibMacros DESTINATION PWGPP)
-install(DIRECTORY EMCAL/QA/macros DESTINATION PWGPP/EMCAL/QA USE_SOURCE_PERMISSIONS)
+install(DIRECTORY EMCAL/QAMacros DESTINATION PWGPP/EMCAL USE_SOURCE_PERMISSIONS)
 install(DIRECTORY EMCAL/macros DESTINATION PWGPP/EMCAL)
 
 install(DIRECTORY HMTFqa/macros DESTINATION PWGPP/HMTFqa)
