HFE pp 13 TeV - update hadron contamination

--- a/PWGHF/hfe/CMakeLists.txt
+++ b/PWGHF/hfe/CMakeLists.txt
@@ -120,6 +120,7 @@ set(SRCS
   AliHFEUnfolding.cxx	
   AliAnalysisTaskHFEEfficiency.cxx
   AliAnalysisTaskHaHFECorrel.cxx
+  AliAnalysisHFETPCTOFNew.cxx
   )
 
 # Headers from sources
