modified version of CMakeLists.txt to add beauty code

--- a/PWGHF/hfe/CMakeLists.txt
+++ b/PWGHF/hfe/CMakeLists.txt
@@ -121,6 +121,9 @@ set(SRCS
   AliAnalysisTaskHFEEfficiency.cxx
   AliAnalysisTaskHaHFECorrel.cxx
   AliAnalysisHFETPCTOFNew.cxx
+  AliHFEminiEventCreator.cxx
+  AliHFEminiEvent.cxx
+  AliHFEminiTrack.cxx
   )
 
 # Headers from sources
