changes for the NanoAOD production of the PWGJEEMCAL tasks
Signed-off-by: Rudiger Haake <ruediger.haake@cern.ch>

--- a/PWG/DevNanoAOD/CMakeLists.txt
+++ b/PWG/DevNanoAOD/CMakeLists.txt
@@ -35,6 +35,7 @@ set(SRCS
   AliNanoAODReplicator.cxx
   AliNanoAODTrack.cxx
   AliAnalysisNanoAODCutsCRCZDC.cxx
+  AliAnalysisNanoAODCutsJet.cxx
   )
 
 # Headers from sources
