HFEminiTree beauty task added and order changed

--- a/PWGHF/hfe/CMakeLists.txt
+++ b/PWGHF/hfe/CMakeLists.txt
@@ -107,6 +107,9 @@ set(SRCS
   AliHFEreducedEventCreatorESD.cxx
   AliHFEreducedEvent.cxx
   AliHFEreducedTrack.cxx
+  AliHFEminiEventCreator.cxx
+  AliHFEminiEvent.cxx
+  AliHFEminiTrack.cxx
   AliHFEreducedMCParticle.cxx
   AliAnalysisTaskHFEQA.cxx
   AliAnalysisTaskHFEemcQA.cxx
