Added Class to analyze CME-ZDC correlation

--- a/PWG/FLOW/Tasks/CMakeLists.txt
+++ b/PWG/FLOW/Tasks/CMakeLists.txt
@@ -73,6 +73,7 @@ set(SRCS
   AliAnalysisTaskZDCEP.cxx
   AliAnalysisTaskPiKpK0Lamba.cxx
   AliAnalysisTaskCmeEse.cxx
+  AliAnalysisTaskCMEV0.cxx
   )
 
 # Headers from sources
