Re-organisation of v2 analysis for muon
offlinev2

offlinev2

offlinev2

offlinev2

offlinev2

offlinev2

offlinev2

offlinev2

offlinev2

--- a/PWG/muon/CMakeLists.txt
+++ b/PWG/muon/CMakeLists.txt
@@ -50,8 +50,7 @@ set(SRCS
   AliAnalysisMuMuGlobal.cxx
   AliAnalysisMuMuMCGene.cxx
   AliAnalysisMuMuMinv.cxx
-  AliAnalysisMuMuFlowEP.cxx
-  AliAnalysisMuMuFlowSP.cxx
+  AliAnalysisMuMuFlow.cxx
   AliAnalysisMuMuNch.cxx
   AliAnalysisMuMuSingle.cxx
   AliAnalysisMuMuTriggerResponse.cxx
