--- a/PWGCF/EBYE/CMakeLists.txt
+++ b/PWGCF/EBYE/CMakeLists.txt
@@ -28,6 +28,7 @@ include_directories(${ROOT_INCLUDE_DIRS}
                     ${AliPhysics_SOURCE_DIR}/PWG/Tools
                     ${AliPhysics_SOURCE_DIR}/OADB/COMMON/MULTIPLICITY	
                     ${AliPhysics_SOURCE_DIR}/PWGCF/EBYE/LRC
+                    ${AliPhysics_SOURCE_DIR}/PWGPP
   )
 
 # Sources - alphabetical order
