Implement handling for track status bits (i.e. hybrid tracks) in the AliEmcalAODFilterBitCuts
Handling implemented as done for the track cuts.
Functionality is covered by a unit test (based on
an analysis task)

--- a/PWG/EMCAL/EMCALtasks/CMakeLists.txt
+++ b/PWG/EMCAL/EMCALtasks/CMakeLists.txt
@@ -78,6 +78,7 @@ set(SRCS
   AliEmcalCorrectionClusterHadronicCorrection.cxx
   AliEmcalCorrectionPHOSCorrections.cxx
   AliAnalysisTaskEmcalOccupancy.cxx
+  TestAliEmcalAODFilterBitCuts.cxx
   )
 
 # Headers from sources
