Task for ZDC analysis on CTRUE events (jgcn)

--- a/PWGUD/UPC/CMakeLists.txt
+++ b/PWGUD/UPC/CMakeLists.txt
@@ -43,6 +43,7 @@ set(SRCS
     nanoAOD/AliAODUPCReplicator.cxx
     nanoAOD/AliAnalysisTaskUpcTriggerCounter.cxx
     nanoAOD/AliAnalysisTaskUpcNano_MB.cxx
+    AliAnalysisTaskTransTask.cxx
    )
 
 # Headers from sources
