--- a/PWGLF/NUCLEX/CMakeLists.txt
+++ b/PWGLF/NUCLEX/CMakeLists.txt
@@ -38,6 +38,7 @@ include_directories(${ROOT_INCLUDE_DIRS}
 set(SRCS
   Exotica/Hdibaryon/AliAnalysisTaskHdibaryonLPpi.cxx
   Exotica/LambdaN/AliAnalysisTaskLambdaNAOD.cxx
+  Exotica/LambdaNN/AliAnalysisTaskLNNntuple.cxx
   Exotica/NOmega/AliAnalysisTaskNOmegaLPK.cxx
   Exotica/NOmega/AliAnalysisTaskOmegaOmegaOX.cxx
   Exotica/NOmega/AliAnalysisTaskNOmegaLX.cxx
