Unit test for AliEmcalTrackSelection
Testing:
- Hybrid tracks
- TPC-only tracks
- ITS pure stand alone tracks

--- a/PWG/EMCAL/EMCALtasks/CMakeLists.txt
+++ b/PWG/EMCAL/EMCALtasks/CMakeLists.txt
@@ -79,6 +79,7 @@ set(SRCS
   AliEmcalCorrectionPHOSCorrections.cxx
   AliAnalysisTaskEmcalOccupancy.cxx
   TestAliEmcalAODFilterBitCuts.cxx
+  TestAliEmcalTrackSelection.cxx
   )
 
 # Headers from sources
