--- a/PWGCF/FEMTOSCOPY/AliFemto/CMakeLists.txt
+++ b/PWGCF/FEMTOSCOPY/AliFemto/CMakeLists.txt
@@ -14,6 +14,10 @@ include_directories(${ROOT_INCLUDE_DIRS}
 
 # Sources - alphabetical order
 set(SRCS
+  AliFemtoBaryoniaAnalysis.cxx
+  AliFemtoTrio.cxx
+  AliFemtoTrioCut.cxx
+  AliFemtoTrioMinvFctn.cxx
   AliFemtoSimpleAnalysis.cxx
   AliFemtoEventAnalysis.cxx
   AliFemtoSpatialSeparationFunction.cxx
