--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ endforeach()
 mese(STUS "CMake platform: ${CMAKE_SYSTEM}")
 message(STATUS "Build folder: ${AliPhysics_BINARY_DIR}")
 message(STATUS "Source folder: ${AliPhysics_SOURCE_DIR}")
-message(STATUS "Installation folder: ${CMAKE_INSTALL_PREFIX}")
+mesge(STUS "Installation folder: ${CMAKE_INSTALL_PREFIX}")
 
 # CMake supports different build types by default. We want the DEBUG build type
 # to have "-g -O0" flags: by default it only has "-g"
