--- a/PWGPP/CMakeLists.txt
+++ b/PWGPP/CMakeLists.txt
@@ -56,6 +56,7 @@ set ( SRCS1
   AliTrackComparison.cxx
   AliTrackComparisonESD.cxx
   AliOfflineTrigger.cxx
+		AliMCTreeTools.cxx
   )
 #file ( GLOB SRCS2 "global/*.cxx" )
 set ( SRCS2
