--- a/HLT/BASE/CMakeLists.txt
+++ b/HLT/BASE/CMakeLists.txt
@@ -148,7 +148,7 @@ set(HDRS ${HDRS}
 get_directory_property(incdirs INCLUDE_DIRECTORIES)
 generate_dictionary("${MODULE}" "${MODULE}LinkDef.h" "${HDRS}" "${incdirs}")
 
-set(ROOT_DEPENDENCIES Core Geom Graf Hist MathCore Net RIO Tree XMLParser)
+set(ROOT_DEPENDENCIES Core Thread Geom Graf Hist MathCore Net RIO Tree XMLParser)
 
 if(${ROOT_VERSION_MAJOR} LESS 6)
     list(APPEND ROOT_DEPENDENCIES Cint)
