Skip installing ZMQhistViewer target with no X11

--- a/HLT/BASE/util/CMakeLists.txt
+++ b/HLT/BASE/util/CMakeLists.txt
@@ -139,6 +139,7 @@ if(ZEROMQ_FOUND)
   if (X11_FOUND)
     add_executable(ZMQhistViewer ZMQhistViewer.cxx)
     target_link_libraries(ZMQhistViewer HLTbase AliHLTGlobal AliZMQhelpers AliHLTUtil RAWDatabase Geom Graf MathCore Net Tree EG Gpad Matrix Minuit Physics VMC Thread STEERBase XMLParser Graf3d RIO Hist Core Hist Rint X11)
+    install(TARGETS ZMQhistViewer RUNTIME DESTINATION bin)
   endif (X11_FOUND)
   add_executable(ZMQproxy ZMQproxy.cxx)
   target_link_libraries(ZMQproxy HLTbase AliHLTGlobal AliZMQhelpers RAWDatabase Geom Graf MathCore Net Tree EG Gpad Matrix Minuit Physics VMC Thread STEERBase XMLParser Graf3d RIO Hist Core)
@@ -148,6 +149,6 @@ if(ZEROMQ_FOUND)
   target_link_libraries(ZMQexample HLTbase AliHLTGlobal AliZMQhelpers RAWDatabase Geom Graf MathCore Net Tree EG Gpad Matrix Minuit Physics VMC Thread STEERBase XMLParser Graf3d RIO Hist Core)
   
   # Installation of 
-  install(TARGETS ZMQexample ZMQfileProxy ZMQROOTmerger ZMQhistSource ZMQhistViewer ZMQproxy ZMQHLTchain RUNTIME DESTINATION bin)
+  install(TARGETS ZMQexample ZMQfileProxy ZMQROOTmerger ZMQhistSource ZMQproxy ZMQHLTchain RUNTIME DESTINATION bin)
   install(PROGRAMS ZMQmonitor.py o2header.py DESTINATION bin)
 endif(ZEROMQ_FOUND)
