Add task of AliAnalysisTaskEmcalSubjet
- Add task of AliAnalysisTaskEmcalSubjet
  - Location: PWGJE/EMCALJetTasks/UserTasks
  - Usage: sub-jet analysis with ALICE data
- Modify property of fFillGhost in AliEmcalJetTask
  - Allowing to save its prompt value in root file
- Changes to be committed:
  - modified: PWGJE/EMCALJetTasks/AliEmcalJetTask.h
  - modified: PWGJE/EMCALJetTasks/CMakeLists.txt
  - modified: PWGJE/EMCALJetTasks/PWGJEEMCALJetTasksLinkDef.h
  - new file: PWGJE/EMCALJetTasks/UserTasks/AliAnalysisTaskEmcalSubjet.cxx
  - new file: PWGJE/EMCALJetTasks/UserTasks/AliAnalysisTaskEmcalSubjet.h

--- a/PWGJE/EMCALJetTasks/CMakeLists.txt
+++ b/PWGJE/EMCALJetTasks/CMakeLists.txt
@@ -233,6 +233,7 @@ if(FASTJET_FOUND)
 	UserTasks/AliAnalysisTaskRecoilJetYield.cxx
         UserTasks/AliAnalysisTaskJetSubstructure.cxx
         UserTasks/AliAnalysisTaskSoftDrop.cxx
+        UserTasks/AliAnalysisTaskEmcalSubjet.cxx
         Tracks/AliAnalysisTaskPtEfficiencyJets.cxx
         Tracks/AliHighPtReconstructionEfficiency.cxx
         Tracks/AliAnalysisTaskTracksInJet.cxx
