--- a/HLT/BASE/CMakeLists.txt
+++ b/HLT/BASE/CMakeLists.txt
@@ -151,10 +151,10 @@ generate_dictionary("${MODULE}" "${MODULE}LinkDef.h" "${HDRS}" "${incdirs}")
 set(ROOT_DEPENDENCIES Core Geom Graf Hist MathCore Net RIO Tree XMLParser)
 
 if(${ROOT_VERSION_MAJOR} LESS 6)
-	list(APPEND ROOT_DEPENDENCIES Cint)
+    list(APPEND ROOT_DEPENDENCIES Cint)
 else()
-	list(APPEND ROOT_DEPENDENCIES Cling)
-endif(${ROOT_VERSION_MAJOR} LESS 6)
+    list(APPEND ROOT_DEPENDENCIES Cling)
+endif()
 
 set(ALIROOT_DEPENDENCIES STEERBase RAWDatabase AliHLTHOMER)
 # Generate the ROOT map
