add embedding macros

--- a/PWGGA/PHOSTasks/CMakeLists.txt
+++ b/PWGGA/PHOSTasks/CMakeLists.txt
@@ -119,6 +119,9 @@ set(SRCS
     PHOS_Run2/AliPHOSEventCuts.cxx
     PHOS_Run2/AliPHOSClusterCuts.cxx
     PHOS_Run2/AliAnalysisTaskPHOSPi0EtaToGammaGamma.cxx
+    PHOS_Run2/AliAnalysisTaskPHOSEmbeddedDiffObjectCreator.cxx
+    PHOS_Run2/AliAnalysisTaskPHOSEmbedding.cxx
+    PHOS_Run2/AliAnalysisTaskPHOSEmbeddingEfficiency.cxx
     PHOS_Tagging/AliAnalysisTaskTaggedPhotons.cxx
     PHOS_TriggerQA/AliAnalysisTaskPHOSTriggerQA.cxx
     UserTasks/AliAnalysisTaskSEPHOSpPbPi0.cxx
