Task for TOF trigger analysis

--- a/PWGUD/UPC/CMakeLists.txt
+++ b/PWGUD/UPC/CMakeLists.txt
@@ -44,6 +44,7 @@ set(SRCS
     nanoAOD/AliAnalysisTaskUpcTriggerCounter.cxx
     nanoAOD/AliAnalysisTaskUpcNano_MB.cxx
     AliAnalysisTaskTransTask.cxx
+    AliAnalysisTaskTOFTrigger.cxx
    )
 
 # Headers from sources
