first version of v1 task for single muon analysis

--- a/PWGHF/hfe/CMakeLists.txt
+++ b/PWGHF/hfe/CMakeLists.txt
@@ -125,6 +125,7 @@ set(SRCS
   AliAnalysisTaskHaHFECorrel.cxx
   AliAnalysisHFETPCTOFNew.cxx
   AliAnalysisHFETPCTOFBeauty.cxx	
+  HFMuFlow/AliAnalysisTaskV1SingleMu.cxx
   )
 
 # Headers from sources
