New class for contamination estimation (Zhanna)

--- a/PWGCF/EBYE/CMakeLists.txt
+++ b/PWGCF/EBYE/CMakeLists.txt
@@ -51,6 +51,7 @@ set(SRCS
   BalanceFunctions/AliAnalysisTaskParticleStudies.cxx
   BalanceFunctions/AliAnalysisTaskPIDBF.cxx
   BalanceFunctions/AliPidBFBase.cxx   
+  BalanceFunctions/Corrections/AliAnalysisTaskAccCont.cxx   
   LRC/AliLRCBase.cxx
   LRC/AliAnalysisTaskLRC.cxx
   LRC/AliLRCAnalysis.cxx
