A possibility to cut on mass, rapidity and pt of centrally produced system is added.

--- a/DRGEN/CMakeLists.txt
+++ b/DRGEN/CMakeLists.txt
@@ -47,7 +47,8 @@ generate_dictionary("${MODULE}" "${MODULE}LinkDef.h" "${HDRS}" "${incdirs}")
 
 # Generate the ROOT map
 # Dependecies
-set(LIBDEPS EVGEN STEER AliPythia6 microcern)
+#set(LIBDEPS EVGEN STEER AliPythia6 microcern)
+set(LIBDEPS EVGEN)
 generate_rootmap("${MODULE}" "${LIBDEPS}" "${CMAKE_CURRENT_SOURCE_DIR}/${MODULE}LinkDef.h")
 
 # Add a library to the project using the specified source files
