Split jet task into task + kernel
- AliEmcalJetFinderKernel: Finding jets from input particles and filling
  TClonesArray (needs to handle input containers as well)
- AliEmcalJetTaskV1: Connect to input event and attachment of output
  array with jets to the input event

Long term goal: Drop AliEmcalJetTaskV1 in favour of jet finder kernels
which are attached by the consumer task to an
AliAnalysisTaskJetFinderManager. This is a multi-step procedure
1) Split of task and functionality (with backward-compatibility test)
2) Change handling of input chain so that the jet finding is a simple
function  (jet finder itself should not deal with input containers)
still using AliEmcalJetTask
3) Drop of AliEmcalJetTask with change of interface

--- a/PWGJE/EMCALJetTasks/CMakeLists.txt
+++ b/PWGJE/EMCALJetTasks/CMakeLists.txt
@@ -220,6 +220,8 @@ if(FASTJET_FOUND)
         AliEmcalJetUtilitySoftDrop.cxx
         AliEmcalJetTask.cxx
         AliEmcalJetFinder.cxx
+        AliEmcalJetFinderKernel.cxx
+        AliEmcalJetTaskV1.cxx
         AliJetEmbeddingFromAODTask.cxx
 	AliJetEmbeddingFromPYTHIATask.cxx
         AliJetShape.cxx
